# test_jenkins_add

./: Jenkinsfile  README.md  pyproject.toml
src/calculator/: __init__.py  math_operations.py
tests/: test_math_operations.py
