[tool.poetry]
name = "calculator"
version = "0.1.0"
description = "Simple calculator with add functionality for Jenkins testing"
authors = ["Test User <test@example.com>"]
readme = "README.md"
packages = [{include = "calculator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.test.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 